chandeliers-lus/tests/compile_fail/ui/tc/poly/dup.stderr
error: expected `node`
 --> tests/compile_fail/ui/tc/poly/dup.rs:3:5
  |
3 |     fn id(t0: T) returns (t1: T);
  |     ^^
